--- a/web/results.html
+++ b/web/results.html
@@ -18,8 +18,10 @@
     <script type="text/javascript"
             src="https://rawgit.com/kristopolous/Porter-Stemmer/master/PorterStemmer1980.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/js-search@1.3.7/dist/umd/js-search.min.js"></script>
-    <script src="static/js/all_pages.js"></script>
-    <script src="static/js/results_new.js"></script>
+    <script src="static/js/allPages.js"></script>
+    <script src="static/js/sessionStorageFunctions.js"></script>
+    <script src="static/js/visualizeJobResults.js"></script>
+    <script src="static/js/results.js"></script>
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
