--- a/web/pickPreviousLSTMModel.html
+++ b/web/pickPreviousLSTMModel.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Compare Algorithms</title>
-<meta charset="UTF-8">
-    <title>Results</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <title>Anomaly Detector | New Job from Previous</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -18,13 +15,33 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-    <script src="static/js/compare_algs.js"></script>
-    <script src="static/js/all_pages.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.5.6/dist/progressbar.js"></script>
+    <script src="static/js/allPages.js"></script>
+    <script src="static/js/sessionStorageFunctions.js"></script>
+    <!--<script src="static/js/submission.js"></script>-->
+    <script src="static/js/pickPreviousLSTMModel.js"></script>
+    <link rel="stylesheet" href="static/css/style.css">
+
 </head>
 <body>
 <!--Navbar-->
 <nav class="navbar navbar-expand-md  mdb blue sticky-top scrolling-navbar" id="navbar"></nav>
 <!--/.Navbar-->
-<div id="res"></div>
+<div id="progress-div"></div>
+
+<div class="row no-gutters py-4 w-100 align-items-center justify-content-center">
+    <h4 class="text-center">Pick from a previously trained model</h4>
+</div>
+
+<div class="accordion" id="accordionExample">
+</div>
+<!--footer-->
+<div class="card-footer justify-content-right fixed-bottom" style="width: 100%;">
+    <button class="btn btn-info float-right" type="button" id="next-btn" onclick="next('prev-lstm-1')" disabled>Next
+    </button>
+</div>
+<!--/.footer-->
+
 </body>
 </html>
