--- a/web/submitJob.html
+++ b/web/submitJob.html
@@ -18,9 +18,9 @@
     <script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/0.5.6/dist/progressbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <link rel="stylesheet" href="static/css/style.css">
-    <script src="static/js/all_pages.js"></script>
-    <!--<script src="static/js/submission.js"></script>-->
-    <script src="static/js/submitted.js"></script>
+    <script src="static/js/allPages.js"></script>
+    <script src="static/js/sessionStorageFunctions.js"></script>
+    <script src="static/js/submitJob.js"></script>
 </head>
 <body>
 
@@ -29,7 +29,10 @@
 <div id="progress-div"></div>
 <!--/.Navbar-->
 <div class="index-div">
-    <div class="row align-items-center justify-content-center" id="index-title" style="width: 100%"></div>
+    <div class="row align-items-center justify-content-center" id="index-title" style="width: 100%">
+        <div class="row justify-content-center w-100" id="submission-text-1"></div>
+        <div class="row justify-content-center w-100" id="submission-text-2"></div>
+    </div>
     <div class="row no-gutters">
         <div class="index-content btn-group mx-auto">
             <button class="btn btn-info dropdown-toggle mr-3 my-3 btn-lg" type="button" id="dropdownMenuButton"
@@ -37,11 +40,11 @@
                 Start New Anomaly Detection Job
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" onclick="save_method_and_next('raw')">From raw signal</a>
+                <a class="dropdown-item" onclick="next('raw')">From raw signal</a>
                 <div class="dropdown-divider"></div>
                 <h2 class="dropdown-header" style="font-size: 1em; color: #2e2c2e;">From LSTM-smoothed signal</h2>
-                <a class="dropdown-item" onclick="save_method_and_next('LSTM-new')">New LSTM model</a>
-                <a class="dropdown-item" onclick="save_method_and_next('LSTM-prev')">Previously trained LSTM model</a>
+                <a class="dropdown-item" onclick="next('LSTM-new')">New LSTM model</a>
+                <a class="dropdown-item" onclick="next('LSTM-prev')">Previously trained LSTM model</a>
             </div>
             <a href="/results" class="btn btn-info mx-3 my-3 btn-lg rounded" role="button" aria-pressed="true">View
                 Previous Jobs</a>
